--- a/address-book-ui/package.json
+++ b/address-book-ui/package.json
@@ -18,12 +18,15 @@
     "@angular/core": "~10.2.4",
     "@angular/forms": "~10.2.4",
     "@angular/material": "^10.2.7",
+    "@angular/material-moment-adapter": "^11.2.7",
     "@angular/platform-browser": "~10.2.4",
     "@angular/platform-browser-dynamic": "~10.2.4",
     "@angular/router": "~10.2.4",
     "@ngrx/store": "^10.1.2",
     "bootstrap": "^4.6.0",
-    "rxjs": "~6.6.0",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
+    "rxjs": "^6.6.7",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
