--- a/address-book-ui/package.json
+++ b/address-book-ui/package.json
@@ -24,7 +24,7 @@
     "@angular/router": "~10.2.4",
     "@ngrx/store": "^10.1.2",
     "bootstrap": "^4.6.0",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "moment": "^2.29.1",
     "rxjs": "^6.6.7",
     "tslib": "^2.0.0",
