--- a/address-book-ui/package.json
+++ b/address-book-ui/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~10.2.4",
     "@ngrx/store": "^10.1.2",
     "bootstrap": "^4.6.0",
+    "bootstrap-icons": "^1.4.1",
     "lodash-es": "^4.17.21",
     "moment": "^2.29.1",
     "rxjs": "^6.6.7",
