--- a/AddressBook/AddressBook.Api/appsettings.Development.json
+++ b/AddressBook/AddressBook.Api/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "ContactsDbContext": "Server=localhost\\SQLEXPRESS;Database=ContactsTestDB_4;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ContactsDbContext": "Server=localhost\\SQLEXPRESS;Database=ContactsDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
